update index & add home.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="searchItem">Search</button>
             </form>
             <button class="btn btn-primary" id="cart"><i class="fas fa-shopping-cart"></i>(0)</button>
-        </nav>
+        </nav><br>
+        <div class="row">
+            <div class="row col-md-6"  >
+                <a href="home.html" class="btn btn-success">home</a>
+                <a href="best-seller.html" class="btn btn-success">best seller</a>
+                <a href="kategori.html" class="btn btn-success">kategori</a>
+            	<a href="about-us.html" class="btn btn-success">about us</a>
+            	<a href="register.html" class="btn btn-success">register</a>
+            </div>
+        </div>
         <div class="row">
             <div class="row col-md-12 mt-2"  id="listBarang" >
                 
